--- a/04 - Array Cardio Day 1/index-START.html
+++ b/04 - Array Cardio Day 1/index-START.html
@@ -38,25 +38,39 @@
     
     // Array.prototype.filter()
     // 1. Filter the list of inventors for those who were born in the 1500's
-
+      const res = inventors.filter((inventor)=> inventor.year>1200)
+    //  console.log(res)
     // Array.prototype.map()
     // 2. Give us an array of the inventors first and last names
-
+       const res1 = inventors.map((inventor)=>`${inventor.first} ${inventor.last}`)
+       //console.log(res1);
     // Array.prototype.sort()
     // 3. Sort the inventors by birthdate, oldest to youngest
-
+     const res2 = inventors.sort((a,b)=>a.year>b.year?1:-1)
+     //console.log(res2);
     // Array.prototype.reduce()
     // 4. How many years did all the inventors live all together?
-
+    const res3 = inventors.reduce((total,inventor)=>{return total+inventor.passed-inventor.year;},0)
+    //console.log(res3);
     // 5. Sort the inventors by years lived
-
+     const res4 = inventors.sort((a,b)=>{
+         const f = a.passed-a.year;
+         const l = b.passed-b.year;
+         f>l?1:-1;
+     })
+    // console.table(res4);
     // 6. create a list of Boulevards in Paris that contain 'de' anywhere in the name
     // https://en.wikipedia.org/wiki/Category:Boulevards_in_Paris
 
 
     // 7. sort Exercise
     // Sort the people alphabetically by last name
-
+     const res5 = people.sort((l,f)=>{
+          const [alname,afname] = l.split(', ');
+          const [blname,bfname] = l.split(', ');
+          return alname>blname?1:-1;
+     })
+     console.log(res5);
     // 8. Reduce Exercise
     // Sum up the instances of each of these
     const data = ['car', 'car', 'truck', 'truck', 'bike', 'walk', 'car', 'van', 'bike', 'walk', 'car', 'van', 'car', 'truck' ];
